# agent-city-hall

./: .gitignore  README.md  config.yaml  example_results.json  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.py
agents/: __init__.py  agent_base.py
config/: config.yaml
data/: demographics.json
data/log/: test.txt
eval/scripts/: run_experiment.py
eval/src/: evaluator.py
eval/src/models/: base.py  gpt4.py  registry.py
message_pool/: message_pool.py
scripts/: api_test.py  code_book.json  notes.txt
src/: __init__.py
src/agents/: __init__.py  agent.py  community.py  developer.py  government.py
src/backend/: README.md  main.py
src/demographics/: __init__.py  search.py
src/experiment/: README.md  requirements.txt  run_experiment.py
src/experiment/protocols/: SF_census_survey_evaluation_5.4.yaml  m03_protocol.yaml  m04_protocol.yaml  sample_protocol.yaml
src/experiment/scripts/: run_experiment.py  validate_model.py
src/frontend/: package-lock.json  package.json
src/frontend/public/: index.html
src/frontend/src/: App.js
src/mechanisms/: __init__.py  base.py  binary.py
src/models/: base.py
src/models/m00_template/: README.md  model.py
src/models/m02_stupid/: model.py
src/models/m03_census/: model.py
src/models/m04_census_twolayer/: model.py  (+1 more)
src/prompts/: __init__.py  prompts.py
src/simulation/: __init__.py  simulate.py
src/utils/: __init__.py  llm.py  llm_llama.py  llm_openai.py  message_pool.py
tests/integration/: test_basic_conversation.py
tests/unit/: test_agent_base.py  test_message_pool.py
(+103 files in other folders)
